<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".feature.details.BalanceResultActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/colorBlueDark">

            <ImageButton
                android:id="@+id/button_back_icons_setting"
                android:layout_width="30dp"
                android:layout_height="50dp"
                app:srcCompat="@drawable/ic_arrow_left_button"
                android:layout_marginLeft="8dp"
                android:background="@android:color/transparent"/>

            <TextView
                android:id="@+id/title_icons_setting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="15dp"
                android:textStyle="bold"
                android:padding="10dp"
                android:layout_marginRight="38dp"
                android:layout_gravity="center_vertical"
                android:hint="@string/category_setting"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/profit_icons_setting"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="10dp"
                    android:padding="10dp"
                    android:gravity="center"
                    android:text="@string/title_profit" />

                <View
                    android:id="@+id/profit_line_icons_settings"
                    android:layout_width="fill_parent"
                    android:layout_height="5dp"
                    android:background="@android:color/transparent" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_gravity="center" >

                <TextView
                    android:id="@+id/expense_icons_setting"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="13dp"
                    android:textStyle="bold"
                    android:padding="10dp"
                    android:gravity="center"
                    android:text="@string/title_expense" />

                <View
                    android:id="@+id/expense_line_icons_settings"
                    android:layout_width="fill_parent"
                    android:layout_height="5dp"
                    android:background="@color/colorBlueDark" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>