<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_item_operation"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".feature.details.ItemOperationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorBlueDark"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/button_back_item_operation"
                android:layout_width="30dp"
                android:layout_height="50dp"
                app:srcCompat="@drawable/ic_arrow_left_button"
                android:layout_marginLeft="8dp"
                android:background="@android:color/transparent"/>

            <TextView
                android:id="@+id/title_item_operation"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginLeft="8dp"
                android:gravity="center"
                android:textSize="15dp"
                android:textStyle="bold"
                tools:text="Title"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/profit_item_operation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="15dp"
                    android:padding="10dp"
                    android:gravity="center"
                    android:text="@string/title_profit" />

                <View
                    android:id="@+id/profit_line_item_operation"
                    android:layout_width="fill_parent"
                    android:layout_height="5dp"
                    android:background="@android:color/transparent" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_gravity="center" >

                <TextView
                    android:id="@+id/expense_item_operation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/title_expense"
                    android:textSize="15dp"
                    android:textStyle="bold" />

                <View
                    android:id="@+id/expense_line_item_operation"
                    android:layout_width="fill_parent"
                    android:layout_height="5dp"
                    android:background="@color/colorBlueDark" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_margin="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:orientation="vertical"
                        android:layout_gravity="center"
                        android:gravity="center">

                        <androidx.cardview.widget.CardView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:cardElevation="0dp"
                            app:cardMaxElevation="0dp"
                            app:cardCornerRadius="10dp"
                            app:cardUseCompatPadding="true">

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:orientation="vertical"
                                android:layout_gravity="center"
                                android:padding="3dp"
                                android:gravity="center">

                                <ImageView
                                    android:id="@+id/image_item_operation"
                                    android:layout_width="75dp"
                                    android:layout_height="75dp"
                                    app:srcCompat="@drawable/ic_touch_app"
                                    tools:ignore="VectorDrawableCompat" />

                                <TextView
                                    android:id="@+id/icon_name_item_operation"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:textAlignment="center"
                                    android:textSize="10dp"
                                    android:text="@string/make_choice"/>
                            </LinearLayout>

                        </androidx.cardview.widget.CardView>

                    </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginLeft="8dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/date_item_operation"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="5.5"
                            android:gravity="center_vertical|right"
                            tools:text="01 Dec 2020" />
                        <ImageButton
                            android:id="@+id/calendar_image_button_item_operation"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@color/colorPrimary"
                            android:layout_marginLeft="8dp"
                            app:srcCompat="@drawable/ic_arrow_down_button"/>


                    </LinearLayout>

                    <EditText
                        android:id="@+id/enter_item_operation"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:inputType="number"
                        android:hint="@string/enter_operationSum" />

                    <EditText
                        android:id="@+id/enter_comment_item_operation"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:gravity="center"
                        android:hint="@string/comment" />

                </LinearLayout>

            </LinearLayout>

            <Button
                android:id="@+id/save_button_item_operation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:text="@string/save_button" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            android:orientation="vertical">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_item_operation"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:padding="8dp"/>
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>