<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".feature.details.BalanceResultActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title_positive_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="15dp"
            android:textStyle="bold"
            android:padding="10dp"
            android:background="@color/colorBlueDark"
            android:hint="@string/title_balance"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="20dp">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                app:srcCompat="@drawable/p_growth_chart"/>

            <TextView
                android:id="@+id/date_profit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:padding="3dp"
                android:textSize="20dp"
                android:textStyle="bold"
                android:hint="Current date"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/title_profit_result_balance"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="3dp"
                    android:textSize="20dp"
                    android:text="@string/profit"/>

                <TextView
                    android:id="@+id/profit_result_balance"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="3dp"
                    android:gravity="center"
                    android:textSize="20dp"
                    android:hint="profit"/>

                <ImageView
                    android:id="@+id/add_profit_result_balance"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center_vertical"
                    app:srcCompat = "@drawable/ic_add_blue_button" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/title_expense_result_balance"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="3dp"
                    android:textSize="20dp"
                    android:text="@string/expense"/>

                <TextView
                    android:id="@+id/expense_result_balance"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="3dp"
                    android:textSize="20dp"
                    android:hint="expense"/>

                <ImageView
                    android:id="@+id/add_expense_result_balance"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center_vertical"
                    app:srcCompat = "@drawable/ic_add_blue_button" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:paddingRight="30dp">

                <TextView
                    android:id="@+id/title_balance"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="3dp"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:text="@string/balance"/>

                <TextView
                    android:id="@+id/balance_result_balance"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="3dp"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:hint="balance"/>

            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="3dp"
                android:layout_marginTop="20dp"
                android:background="#FF0000FF"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                android:paddingRight="30dp">

                <TextView
                    android:id="@+id/title_total_balance"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="3dp"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:text="@string/total_balance"/>

                <TextView
                    android:id="@+id/total_balance_result_balance"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="3dp"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:hint="balance"/>

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="bottom"
            android:padding="5dp"
            android:background="@color/colorBlueDark">

            <ImageButton
                android:id="@+id/profit_button_balance_result"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/ic_profit_button"
                android:background="@android:color/transparent"/>

            <ImageButton
                android:id="@+id/expense_button_balance_result"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/ic_expense_button"
                android:background="@android:color/transparent"/>

            <ImageButton
                android:id="@+id/chart_button_balance_result"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/ic_chart_button"
                android:background="@android:color/transparent"/>

            <ImageButton
                android:id="@+id/settings_button_balance_result"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/ic_settings_button"
                android:background="@android:color/transparent"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>